src/test/resources/parser/invalid/list/indexNonList.sbsc
// parser should fail when indexing something that isn't a list

a = 5;

println(str(a[3]));